<resources>
    <string name="app_name">EmindAppStore</string>
    <string name="base_url">http://192.168.0.30:38080/EmindStoreServer/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">首页</string>
    <string name="detail">详情</string>
    <string name="discover">发现(Fragment+ViewPager嵌套)</string>
    <string name="shop">商店(Fragment嵌套)</string>
    <string name="login">登录</string>
    <string name="system">系统</string>
    <string name="swipe">侧滑返回Sample</string>
    <string name="go_swipe_back">SwipeBackActivity+Fragment</string>
    <string name="go_swipe_back_f">SwipeBackFragment</string>

    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="recommend">推荐</string>
    <string name="hot">热门</string>
    <string name="favorite">收藏</string>

    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="register">注册</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_transition">image_transition</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="send">发送</string>
    <string name="user_manager">账号管理</string>
    <string name="sys_setting">系统设置</string>
    <string name="support">帮助与反馈</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="emind_appstore">一铭应用商店</string>
</resources>
