<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_manager"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/user_manager" />
        <item
            android:id="@+id/nav_sys_setting"
            android:icon="@drawable/ic_discover_white_24dp"
            android:title="@string/sys_setting" />

        <item
            android:id="@+id/nav_msg"
            android:icon="@drawable/ic_message_white_24dp"
            android:title="@string/support" />
        <item
            android:icon="@drawable/ic_discover_white_24dp"
            android:title="@string/check_update" />

        <item
            android:icon="@drawable/ic_touch_app_white_24dp"
            android:title="@string/about" />
    </group>

</menu>